# x-tracer

./: .gitignore  README.md  discuss.py  pyproject.toml  x_tracer.py
docs/: .development_process.md.swp  IMPLEMENTATION_PLAN.md  PLAN.md  SEMANTIC_SPEC.md  TESTCASE_GENERATION.md  architecture.md  conversation_log_2026-03-16_to_21.md  development_process.md  final_synthesis.md  linkedin_article.md  round_1_claude.md  round_1_codex.md  round_2_claude.md  round_2_codex.md  round_3_claude.md  round_3_codex.md  round_4_claude.md  round_4_codex.md  validation.md
src/cli/: __init__.py  formatters.py  interactive.py  main.py
src/gates/: __init__.py  cells.py  model.py  primitives.py
src/netlist/: __init__.py  fast_parser.py  gate.py  graph.py  parser.py
src/tracer/: __init__.py  core.py
src/vcd/: __init__.py  database.py  extract.py  pyvcd_backend.py  pywellen_backend.py
tests/: fix_sequential_cases.py  registry.json  registry_update.py  test_cli.py  test_fast_parser.py  test_gates.py  test_netlist.py  test_tracer.py  test_vcd.py  test_vcd_extended.py  validate.py
tests/cases/stress/: manifest.json  netlist.v  qaLog.txt  sim.vcd  sim_synthetic.vcd  tb.v  xrun.history
tests/cases/stress/xcelium.d/: history
tests/cases/stress_edge/: gen_vcd.py  verify_vcd.py
tests/cases/stress_edge/clock_crossing/: manifest.json  netlist.v  sim.vcd  tb.v
tests/cases/stress_edge/deep_pipeline/: manifest.json  netlist.v  sim.vcd  tb.v
tests/soc/: conftest.py  test_soc_netlist.py  test_soc_trace_synthetic.py
tools/: find_x_signals.py  test_soc_multi_signal.py
(+1425 files in other folders)
