[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "x-tracer"
version = "0.1.0"
description = "X-Tracer: root-cause analysis for X values in gate-level simulations"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyslang>=7.0",
]

[project.optional-dependencies]
fast = ["pywellen>=0.1"]

[project.scripts]
x-tracer = "src.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
